// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders app variant as expected 1`] = `
<body>
  <div>
    <div
      class="app"
    />
  </div>
</body>
`;

exports[`Box renders container variant as expected 1`] = `
<body>
  <div>
    <div
      class="container"
    />
  </div>
</body>
`;
